# pysqlsync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  check.bat  check.sh  mypy.ini  package.bat  package.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_test.sh  setup.cfg  setup.py
.github/actions/test/: action.yml
.github/workflows/: main.yml
pysqlsync/: __init__.py  base.py  connection.py  factory.py  properties.py  python_types.py  resultset.py
pysqlsync/data/: exchange.py  generator.py
pysqlsync/dialect/: README.md
pysqlsync/dialect/delta/: data_types.py  dependency.py  engine.py  generator.py  object_types.py
pysqlsync/dialect/mssql/: README.md  connection.py  data_types.py  dependency.py  discovery.py  engine.py  generator.py  mutation.py  object_types.py
pysqlsync/dialect/mysql/: connection.py  data_types.py  dependency.py  discovery.py  engine.py  generator.py  mutation.py  object_types.py
pysqlsync/dialect/mysql/impl/: aiomysql.py  mysqlclient.py
pysqlsync/dialect/oracle/: README.md  connection.py  data_types.py  dependency.py  discovery.py  engine.py  generator.py  mutation.py  object_types.py
pysqlsync/dialect/postgresql/: connection.py  data_types.py  dependency.py  discovery.py  engine.py  generator.py  mutation.py  object_types.py
pysqlsync/dialect/redshift/: connection.py  data_types.py  dependency.py  engine.py  generator.py
pysqlsync/dialect/snowflake/: data_types.py  dependency.py  engine.py  generator.py  object_types.py
pysqlsync/dialect/test/: dependency.py  engine.py
pysqlsync/dialect/trino/: connection.py  dependency.py  discovery.py  engine.py  generator.py
pysqlsync/formation/: constraints.py  converter.py  data_types.py  discovery.py  inspection.py  mutation.py  object_dict.py  object_types.py  py_to_sql.py  sql_to_py.py
pysqlsync/model/: data_types.py  entity_types.py  id_types.py  key_types.py  properties.py
pysqlsync/postgresql/: connection.py  engine.py  generator.py
pysqlsync/trino/: connection.py  engine.py  generator.py
pysqlsync/util/: dataclasses.py  dispatch.py  typing.py  unsync.py
tests/: .gitignore  datagen.py  example.py  measure.py  params.py  tables.py  test_api.py  test_connection.py  test_converter.py  test_discovery.py  test_exchange.py  test_generator.py  test_import.py  test_performance.py  test_synchronize.py  test_types.py  timed_test.py  update_readme.py  util.py
tests/case/: discovery.py
tests/cases/: case_connection.py  case_discovery.py
tests/model/: country.py  event.py  school.py  user.py
tests/postgresql/: test_connection.py  test_generator.py
