[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysqlsync"
description = "Synchronize schema and large volumes of data"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["synchronization", "sql-schema", "sql-query", "sql-insert", "database-clients"]
license = "MIT"
authors = [
    { name = "Levente Hunyadi", email = "hunyadi@gmail.com" }
]
maintainers = [
    { name = "Levente Hunyadi", email = "hunyadi@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "json_strong_typing >= 0.4.1",
    "certifi >= 2025.10.5; python_version<'3.10'",
    "truststore >= 0.10; python_version>='3.10'",
    "typing_extensions >= 4.15; python_version < '3.12'"
]
dynamic = ["version"]

[project.optional-dependencies]
tsv = [
    "tsv2py >= 0.7"
]
postgresql = [
    "asyncpg >= 0.30"
]
oracle = [
    "oracledb >= 3.4"
]
mysql = [
    "aiomysql >= 0.3",
    "PyMySQL[rsa] >= 1.1"
]
mssql = [
    "pyodbc >= 5.3"
]
snowflake = [
    "snowflake-connector-python >= 3.18"
]
trino = [
    "aiotrino >= 0.3"
]

[project.urls]
"Homepage" = "https://github.com/hunyadi/pysqlsync"
"Source" = "https://github.com/hunyadi/pysqlsync"

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pysqlsync*"]

[tool.setuptools.dynamic]
version = { attr = "pysqlsync.__version__" }

[tool.setuptools.package-data]
"pysqlsync" = ["py.typed"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "B", "I", "Q"]
