[metadata]
name = pysqlsync
version = attr: pysqlsync.__version__
description = Synchronize schema and large volumes of data
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/pysqlsync
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    json_strong_typing >= 0.3.0
    typing_extensions >= 4.8; python_version<"3.12"

[options.extras_require]
tsv =
    tsv2py >= 0.5
mssql =
    pyodbc >= 5.0
mysql =
    aiomysql >= 0.2
    PyMySQL[rsa]
postgresql =
    asyncpg >= 0.28
trino =
    aiotrino >= 0.2

[options.packages.find]
exclude =
    tests*

[options.package_data]
pysqlsync =
    py.typed

[flake8]
extend_ignore = DAR101,DAR201,DAR301,DAR401
max_line_length = 140
