[metadata]
name = pysqlsync
version = attr: pysqlsync.__version__
description = Synchronize schema and large volumes of data
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/pysqlsync
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    json_strong_typing >= 0.3.6
    certifi >= 2024.12.14; python_version<"3.10"
    truststore >= 0.10; python_version>="3.10"
    typing_extensions >= 4.12; python_version<"3.12"

[options.extras_require]
tsv =
    tsv2py >= 0.7
postgresql =
    asyncpg >= 0.30
oracle =
    oracledb >= 2.5
mysql =
    aiomysql >= 0.2
    PyMySQL[rsa] >= 1.1
mssql =
    pyodbc >= 5.2
snowflake =
    snowflake-connector-python >= 3.12
trino =
    aiotrino >= 0.2

[options.packages.find]
exclude =
    tests*

[options.package_data]
pysqlsync =
    py.typed
